--- a/elements/my-self.css
+++ b/elements/my-self.css
@@ -87,7 +87,10 @@
     font-size: 1.25rem;
     line-height: 2rem;
     max-width: 100%;
-    text-align: center; } }
+    text-align: center; }
+    .myself b {
+      font-size: 1.5rem;
+      text-shadow: 1px 1px rgba(174, 174, 174, 0.65); } }
 
 @media screen and (max-height: 1000px) {
   .space {
