--- a/elements/my-timeline.css
+++ b/elements/my-timeline.css
@@ -50,6 +50,12 @@ my-font-awesome {
 .timeline-item {
   margin-bottom: 50px;
   position: relative; }
+  .timeline-item:hover .timeline-content {
+    border-color: #d0d0d0;
+    -webkit-transform: translate(-12px, -12px);
+    transform: translate(-12px, -12px);
+    -ms-box-shadow: 12px 12px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 12px 12px 2px rgba(0, 0, 0, 0.1); }
   .timeline-item .timeline-content {
     width: 45%;
     background: #fff;
@@ -58,12 +64,6 @@ my-font-awesome {
     will-change: transform, box-shadow;
     border-radius: 5px;
     transition: all 0.3s ease; }
-    .timeline-item .timeline-content:hover {
-      border-color: #d0d0d0;
-      -webkit-transform: translate(-12px, -12px);
-      transform: translate(-12px, -12px);
-      -ms-box-shadow: 12px 12px 2px rgba(0, 0, 0, 0.1);
-      box-shadow: 12px 12px 2px rgba(0, 0, 0, 0.1); }
     .timeline-item .timeline-content h2 {
       padding: 15px;
       background: #e9e9e9;
